# py-energy-playground

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: uv.mdc
data/: canada-monthly-generation.json  options.txt
emberstats/: __init__.py  analysis.py  country_codes.py  country_report.py  fuel_report.py  global_report.py  load.py  main.py  models.py  report.py
emberstats/scripts/: social_post.js
src/: analysis.py  find_peak_months.py  load.py  main.py  models.py  report.py
tests/: test_analysis.py
tests/data/: canada-monthly-generation-2020.json  canada-monthly-generation.json
